Fixing logo alignment

--- a/styles/components/_projects.scss
+++ b/styles/components/_projects.scss
@@ -99,6 +99,7 @@
     display: flex;
     padding: 0 20px;
     justify-content: center;
+    align-items: center;
     box-sizing: border-box;
     height: 100px;
     width: 200px;
